tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/nested-min-length.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      nested-host: { host: 'ab' }
    }
  }
}
